--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu id="leftMenu" [content]="content">
+<ion-menu [content]="content">
 
     <ion-toolbar darkest-gray>
         <ion-title>Navigate</ion-title>
