--- a/app/pages/record/record.html
+++ b/app/pages/record/record.html
@@ -12,13 +12,18 @@
     <vu-gauge bgcolor="#fff" height="2.5em" nbars="55" min="0" max="128" rate="20" 
               [value]="currentVolume"></vu-gauge>
     <p class="item-label">Gain: {{gain}}% ({{dB}})</p>
-    <input type="range" min="0" max="200" [value]="sliderValue" (input)="onSliderChange($event)" (touchstart)="onSliderDrag($event)" (mousedown)="onSliderDrag($event)">
+    <input type="range" min="0" max="200" 
+           [value]="sliderValue" 
+           (input)="onSliderChange($event)" 
+           (touchstart)="onSliderDrag($event)" 
+           (mousedown)="onSliderDrag($event)">
     <div class="recording-time">{{recordingTime}}</div>
     <div class="record-upload-buttons">
-        <button logo-red (click)="toggleRecord()">
+        <button logo-red (click)="onClickStartPauseButton()">
             <ion-icon [name]="recordButtonIcon"></ion-icon>
         </button>
-        <button logo-orange [disabled]="notYetStarted" (click)="stopRecord()">
+        <button logo-orange [disabled]="mediaRecorder && mediaRecorder.state === 'inactive'" 
+                (click)="onClickStopButton()">
             <ion-icon name="square"></ion-icon>
         </button>
     </div>
