--- a/app/app.html
+++ b/app/app.html
@@ -6,10 +6,10 @@
 
     <ion-content [class]="platform.platforms()">
         <ion-list>
-            <button ion-item menuClose (click)="app.getComponent('nav-tabs').select(0);">
+            <button ion-item menuClose (click)="selectTab(0);">
                 Record
             </button>
-            <button ion-item menuClose (click)="app.getComponent('nav-tabs').select(1);">
+            <button ion-item menuClose (click)="selectTab(1);">
                 Library
             </button>
             <button ion-item menuClose>
