--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs id="nav-tabs">,
-    <ion-tab [root]="tab1Root" tabTitle="Record"></ion-tab>,
-    <ion-tab [root]="tab2Root" tabTitle="Library"></ion-tab>,
+<ion-tabs id="nav-tabs" preloadTabs="true" selectedIndex="selectedIndex">
+    <ion-tab [root]="tab1Root" tabTitle="Record"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Library"></ion-tab>
 </ion-tabs>
