--- a/app/pages/add-folder/add-folder.html
+++ b/app/pages/add-folder/add-folder.html
@@ -1,29 +1,30 @@
-<ion-toolbar>
+<ion-toolbar dark>
     <ion-title>
-        Add Folder in {{parentPath}}
+        Add Folder
     </ion-title>
-</ion-toolbar>
-
-<ion-toolbar position="bottom">
-    <ion-buttons>
+    <ion-buttons end>
         <button (click)="onClickCancel()">Cancel</button>
     </ion-buttons>
 </ion-toolbar>
 
 <ion-content padding>
+    <p>Adding in {{parentPath}}</p>
     <ion-list>
         <form #addFolderForm="ngForm" novalidate>
             <ion-item>
                 <ion-label floating primary>Name of folder to add</ion-label>
-                <ion-input [(ngModel)]="folderName" ngControl="thisForm" type="text" #thisForm="ngForm" required>
+                <ion-input [(ngModel)]="folderName" ngControl="name" type="text" #name="ngForm" required>
                 </ion-input>
             </ion-item>
             <div class="error-message-container">
-                <p [hidden]="thisForm.valid" logo-red padding-left>
-                    Name must not be empty
+                <p [hidden]="name.valid || name.pristine" logo-red padding-left>
+                    Name cannot not be empty
+                </p>
+                <p [hidden]="folderName.indexOf('/') === -1" logo-red padding-left>
+                    Name cannot contain slash (/) characters
                 </p>
             </div>
-            <button (click)="onClickDone(addFolderForm)" type="submit" block>
+            <button (click)="onClickAdd(addFolderForm)" type="submit" block>
                 Add
             </button>
         </form>
