--- a/app/pages/add-folder/add-folder.html
+++ b/app/pages/add-folder/add-folder.html
@@ -26,7 +26,7 @@
                     </p>
                 </div>
             </div>
-            <button (click)="onClickAdd()" [disabled]="!form.valid" type="submit" block>
+            <button type="button" (click)="onClickAdd()" [disabled]="!form.valid" block>
                 Add
             </button>
         </form>
