--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
   <!-- this Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
-  <script src="cordova.js"></script>
+  <!--script src="cordova.js"></script-->
   <script src="build/js/app.bundle.js"></script>
 </body>
 </html>
