--- a/app/pages/record/record.html
+++ b/app/pages/record/record.html
@@ -1,4 +1,4 @@
-<ion-navbar *navbar dark>
+<ion-navbar *navbar darkest-gray>
     <button menuToggle>
         <ion-icon name="menu"></ion-icon>
     </button>
