--- a/app/pages/tabs/tabs.html
+++ b/app/pages/tabs/tabs.html
@@ -1,3 +1,5 @@
+<!-- Copyright (C) 2015, 2016 Tracktunes Inc -->
+
 <ion-tabs id="nav-tabs" preloadTabs="true" selectedIndex="selectedIndex">
     <ion-tab [root]="tab1Root" tabTitle="Record"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Library"></ion-tab>
