--- a/app/pages/record/record.html
+++ b/app/pages/record/record.html
@@ -1,3 +1,5 @@
+<!-- Copyright (C) 2015, 2016 Tracktunes Inc -->
+
 <ion-navbar *navbar darkest-gray>
     <button menuToggle>
         <ion-icon name="menu"></ion-icon>
