--- a/app/pages/record/record.html
+++ b/app/pages/record/record.html
@@ -1,6 +1,6 @@
 <!-- Copyright (C) 2015, 2016 Tracktunes Inc -->
 
-<ion-navbar *navbar dark>
+<ion-navbar *navbar almost-dark>
     <button menuToggle>
         <ion-icon name="menu"></ion-icon>
     </button>
