--- a/app/app.html
+++ b/app/app.html
@@ -25,5 +25,5 @@
 
 </ion-menu>
 
-<ion-nav id="nav" [root]="rootPage" #content swipe-back-enabled="false">
+<ion-nav [root]="rootPage" #content swipe-back-enabled="false">
 </ion-nav>
