now showing selected nav menu item as loaded from DB

--- a/app/app.html
+++ b/app/app.html
@@ -8,16 +8,16 @@
 
     <ion-content [class]="platform.platforms()">
         <ion-list>
-            <button ion-item menuClose (click)="selectTab(0);">
+            <button id="button0" ion-item menuClose (click)="selectTab(0);">
                 Record
             </button>
-            <button ion-item menuClose (click)="selectTab(1);">
+            <button id="button1" ion-item menuClose (click)="selectTab(1);">
                 Library
             </button>
-            <button ion-item menuClose>
+            <button id="button2" ion-item menuClose>
                 Settings
             </button>
-            <button ion-item menuClose>
+            <button id="button3" ion-item menuClose>
                 About
             </button>
         </ion-list>
