fixed nav menu appearance

--- a/app/app.html
+++ b/app/app.html
@@ -7,7 +7,7 @@
     </ion-toolbar>
 
     <ion-content [class]="platform.platforms()">
-        <ion-list>
+        <ion-list class="app-menu-buttons">
             <button id="button0" ion-item menuClose (click)="selectTab(0);">
                 Record
             </button>
