--- a/app/pages/add-folder/add-folder.html
+++ b/app/pages/add-folder/add-folder.html
@@ -1,6 +1,6 @@
 <!-- Copyright (C) 2015, 2016 Tracktunes Inc -->
 
-<ion-toolbar dark>
+<ion-toolbar darkest-gray>
     <ion-title>
         Add Folder
     </ion-title>
