--- a/app/pages/record/record.html
+++ b/app/pages/record/record.html
@@ -14,7 +14,7 @@
     </p>
     <vu-gauge height="2.5em" nbars="55" min="0" max="128" rate="20"
               [value]="currentVolume"></vu-gauge>
-    <p class="item-label">Gain: {{gain}}% ({{dB}})</p>
+    <p class="item-label">Gain: {{gain}}% ({{decibels}})</p>
     <input type="range" min="0" max="200"
            [value]="sliderValue"
            (input)="onSliderChange($event)"
